Fix loader positioning on iOS

--- a/public/less/app.less
+++ b/public/less/app.less
@@ -475,8 +475,12 @@ a, button {
     }
   }
 
-  .loading {
+  .loader {
     position: fixed !important;
+
+    .loading {
+      position: fixed !important;
+    }
   }
 
   .quickstart {
